Use SPDX 3.0 license identifier
SPDX released version 3 of their license list (<https://spdx.org/licenses/>),
which changed the FSF licenses to explicitly end in -only or -or-later
instead of relying on an easy to miss + symbol.

Bug: T183858
Change-Id: I34a982bd1cb1720d77a46ac792a6523fc6054e81

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"name": "mediawiki/blue-spice-readers",
 	"type": "mediawiki-extension",
 	"description": "Creates a list of the people who read a page",
-	"license": "GPL-3.0",
+	"license": "GPL-3.0-only",
 	"require": {
 		"composer/installers": "~1.0"
 	},
