--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,19 +1,25 @@
 {
 	"root": true,
 	"extends": [
-		"wikimedia/client-es6",
+		"wikimedia/client",
 		"wikimedia/jquery",
 		"wikimedia/mediawiki"
 	],
+	"parserOptions": {
+		"sourceType": "commonjs",
+		"ecmaVersion": 2017
+	},
 	"globals": {
 		"blueSpice": "readonly",
+		"bs": "readonly",
+		"ext": "readonly",
+		"jQuery": "readonly",
 		"mediaWiki": "readonly",
 		"OOJSPlus": "readonly"
 	},
 	"rules": {
+		"es-x/no-array-prototype-includes": "off",
+		"es-x/no-async-functions": "off",
 		"max-len": "off"
-	},
-	"parserOptions": {
-		"ecmaVersion": 8
 	}
 }
